# POSST

./: LICENSE  README.md  pyproject.toml  update_dependencies.py
.spyproject/config/: workspace.ini
.spyproject/config/backups/: workspace.ini.bak
POSST/html/: POSST.html  search.js
POSST/html/POSST/gasflow/: compressor.html  reservoir.html  restriction.html
POSST/html/POSST/misc/: Gas.html
html/: POSST.html  fuelcell.html  gasflow.html  index.html  misc.html  search.js
html/POSST/: fuelcell.html  gasflow.html  index.html  misc.html
html/POSST/fuelcell/: __init__fuelcell.html  fuelcell.html  stack.html
html/POSST/fulecell/: index.html  stack.html
html/POSST/gasflow/: compressor.html  index.html  reservoir.html  restriction.html
html/POSST/misc/: Gas.html  index.html
html/fuelcell/: stack.html
html/gasflow/: compressor.html  reservoir.html  restriction.html
html/misc/: Gas.html
html/pdoc/test/example_pkg/: index.html  index.m.html  module.html
html/pdoc/test/example_pkg/subpkg/: index.html
html/pdoc/test/example_pkg/subpkg2/: index.html  module.html
publications/: publist.xlsx
publications/2024_FC-3/: 2024_10_08_FC-3_BB.pptx
src/POSST/: __init__.py  requirements.txt
src/POSST/fuelcell/: __init__.py  stack.py
src/POSST/gasflow/: __init__.py  compressor.py  reservoir.py  restriction.py
src/POSST/misc/: Gas.py  __init__.py
src/POSST_Sim.egg-info/: PKG-INFO  SOURCES.txt
