[build-system]
requires = ["hatchling","setuptools", "wheel"]
build-backend = "setuptools.build_meta"#"hatchling.build"

[project]
name = "POSST-Sim"
version = "0.0.2"
authors = [
  { name="Florian Dennewitz", email="florian.dennewitz@unitybox.de" },
  { name="Niklas Nickig", email="n.nickig@zbt.de"}
  ]

maintainers = [
  { name="Leonora Kastrati", email="leonoraa.21@hotmail.com" },
  { name="Matthias Bahr", email="m.bahr@zbt.de" }
 ]

description = "Python Open Source Simulation Tool (POSST):Simulating Transient Systems Based on Controlled-Oriented Models (COM), Mean Value Modeling (MVM), Lumped Parameter System (LPS)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/POSST"]


[project.urls]
Homepage = "https://github.com/ZBT-Tools/POSST"
Issues = "https://zbt-tools.github.io/POSST/html/POSST.html"